<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StackMob</string>
    <string name="menu_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_your_passord">Forgot your password?</string>
    <string name="reset">Reset</string>
    <string name="temporary_password">Temporary password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="speaker">Speaker</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="action">Action</string>

</resources>